<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>psidev.psi.pi</groupId>
	<artifactId>mzidentml-validator</artifactId>
	<packaging>jar</packaging>

	<version>1.4.36-SNAPSHOT</version>
	<name>HUPO-PSI mzIdentML semantic and MIAPE validator</name>
	<description>A semantic and MIAPE validator for HUPO-PSI mzIdentML XML files.</description>

	<properties>
		<lib.dir>lib</lib.dir>
    	<project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
		<assembly.output.folder>validator</assembly.output.folder>
		<assembly.dir>mzIdentMLValidator_GUI_v${project.version}</assembly.dir>
		<java.version>11</java.version>
	</properties>

	<dependencies>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-swing</artifactId>
			<version>18</version>
		</dependency>

		<dependency>
			<groupId>psidev.psi.tools</groupId>
			<artifactId>validator</artifactId>
			<version>2.1.3</version>
			<exclusions>
				<exclusion>
					<groupId>xerces</groupId>
					<artifactId>xerces</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>

		<!-- 3rd party -->
		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>1.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.12.0</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-text</artifactId>
			<version>1.10.0</version>
		</dependency>
		<dependency>
			<groupId>commons-jxpath</groupId>
			<artifactId>commons-jxpath</artifactId>
			<version>1.3</version>
		</dependency>

		<dependency>
			<groupId>uk.ac.ebi.jmzidml</groupId>
			<artifactId>jmzidentml</artifactId>
			<version>1.3.0-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>psidev.psi.tools</groupId>
			<artifactId>xxindex</artifactId>
			<version>0.23</version>
		</dependency>

		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>1.5.0</version>
		</dependency>
	</dependencies>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
            </resource>
		</resources>
		<plugins>
			<!-- To compile with JDK11 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<release>${java.version}</release>
				</configuration>
			</plugin>
			<!-- To copy the dependencies from the maven repository to the lib directory -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/${lib.dir}</outputDirectory>
							<overWriteReleases>false</overWriteReleases>
							<overWriteSnapshots>false</overWriteSnapshots>
							<overWriteIfNewer>true</overWriteIfNewer>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>gui</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<plugins>
					<!-- to create a executable jar to start the MzIdentMLValidatorGUI -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-jar-plugin</artifactId>
						<version>3.1.2</version>
						<configuration>
							<archive>
								<manifest>
									<mainClass>psidev.psi.pi.validator.MzIdentMLValidatorGUI</mainClass>
									<addClasspath>true</addClasspath>
									<classpathPrefix>${lib.dir}</classpathPrefix>
								</manifest>
								<manifestEntries>
									<Add-Opens>java.base/sun.reflect.annotation</Add-Opens>
								</manifestEntries>
							</archive>
						</configuration>
					</plugin>
					<plugin>
						<artifactId>maven-assembly-plugin</artifactId>
						<configuration>
							<outputDirectory>bin</outputDirectory>
							<descriptorRefs>
								<descriptorRef>jar-with-dependencies</descriptorRef>
							</descriptorRefs>
							<finalName>${project.artifactId}-${project.version}-gui</finalName>
							<appendAssemblyId>false</appendAssemblyId>
							<archive>
								<manifest>
									<mainClass>psidev.psi.pi.validator.MzIdentMLValidatorGUI</mainClass>
								</manifest>
								<!-- jmzidentml's MzIdentMLNamespaceFilter.changeNamespaceBinding() rewrites the
								     @XmlSchema annotation by reflection; needs sun.reflect.annotation opened on Java 16+ -->
								<manifestEntries>
									<Add-Opens>java.base/sun.reflect.annotation</Add-Opens>
								</manifestEntries>
							</archive>
						</configuration>
						<executions>
							<execution>
								<id>make-my-jar-with-dependenciess</id>
								<phase>package</phase>
								<goals>
									<goal>single</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
<!--					<plugin>-->
<!--						<groupId>org.apache.maven.plugins</groupId>-->
<!--						<artifactId>maven-javadoc-plugin</artifactId>-->
<!--						<version>3.1.1</version>-->
<!--					</plugin>-->
<!--					<plugin>-->
<!--						<groupId>org.apache.maven.plugins</groupId>-->
<!--						<artifactId>maven-surefire-plugin</artifactId>-->
<!--						<version>2.22.2</version>-->
<!--						<configuration>-->
<!--							<argLine>-Dfile.encoding=${project.build.sourceEncoding}</argLine>-->
<!--						</configuration>-->
<!--					</plugin>-->
				</plugins>
			</build>
		</profile>
		<profile>
			<id>cmd</id>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-assembly-plugin</artifactId>
						<configuration>
							<outputDirectory>bin</outputDirectory>
							<descriptorRefs>
								<descriptorRef>jar-with-dependencies</descriptorRef>
							</descriptorRefs>
							<finalName>${project.artifactId}-${project.version}-cmd</finalName>
							<appendAssemblyId>false</appendAssemblyId>
							<archive>
								<manifest>
									<mainClass>psidev.psi.pi.validator.MzIdentMLValidator</mainClass>
								</manifest>
								<!-- jmzidentml's MzIdentMLNamespaceFilter.changeNamespaceBinding() rewrites the
								     @XmlSchema annotation by reflection; needs sun.reflect.annotation opened on Java 16+ -->
								<manifestEntries>
									<Add-Opens>java.base/sun.reflect.annotation</Add-Opens>
								</manifestEntries>
							</archive>
						</configuration>
						<executions>
							<execution>
								<id>make-my-jar-with-dependenciess</id>
								<phase>package</phase>
								<goals>
									<goal>single</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	<repositories>
		<!-- Maven -->
        <repository>
            <id>central</id>
            <name>Maven Repository Switchboard</name>
            <layout>default</layout>
            <url>https://repo.maven.apache.org/maven2/</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <!-- EBI repositories -->
		<repository>
			<id>ebi-repo</id>
			<name>The EBI internal repository</name>
			<url>https://www.ebi.ac.uk/Tools/maven/repos/content/groups/ebi-repo</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>ebi-snapshots</id>
			<name>The EBI internal repository.SNAPSHOTS</name>
			<url>https://www.ebi.ac.uk/Tools/maven/repos/content/groups/ebi-snapshots</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>
</project>
